Fix homepage about text and add name on mobile

--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -272,6 +272,7 @@ body {
     background: #bada55;
     border-radius: 20px 20px 0 20px;
     padding: 10px 20px;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.5);
 
     img {
         height: 24px;
@@ -438,6 +439,10 @@ form {
 @media screen and (max-width: 600px) {
     body {
         padding: 0;
+    }
+
+    .login-display-name {
+        display: none;
     }
 
     .banner {
